minor changes mds

--- a/2020-05-post011.md
+++ b/2020-05-post011.md
@@ -4,7 +4,8 @@ title: This Is My First Ever Post
 date: 2020-07-10
 tags: ['post']
 ---
-# How it all begun
+## How it all begun
+
 <!-- Excerpt Start -->
 It is a long story. Seems to happen by chance. But upon further inspection, it could look differently.
 <!-- Excerpt End -->
